--- a/ProjectManagement/src/main/resources/static/styles.css
+++ b/ProjectManagement/src/main/resources/static/styles.css
@@ -156,7 +156,7 @@ body {
 }
 .main-content {
     padding: 20px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.9);
     margin: 15px;
 }
 .input{
