--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -14,19 +14,10 @@
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <link href="/styles.css" rel="stylesheet"  type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>creategroup</title>
     <style>
-        .btn-group {
-            display: inline-block;
-            margin-right: 10px;
-        }
-        .btn-group .btn {
-            background-color: #007bff;
-            color: #fff;
-            border-radius: 20px;
-            padding: 5px 15px;
-            font-size: 14px;
-            border: none;
-        }
+
     </style>
 </head>
 <body>
@@ -35,38 +26,56 @@
     <div class="sidebar col-3"></div>
     <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
     <div class="col-9 main-content">
-        <p class="text-center" style="font-size: x-large; font-weight: bolder;">My Group</p><hr>
-        <button class="table">
-            <a href="/groupdetail" class="nav-link link-dark">
-                <div class="row">
+        <p class="text-center" style="font-size: x-large; font-weight: bolder;">
+            Group Name
+            <span class="float-end">
+                <button class="btn btn-primary" style="font-size: 1vh;">
+                    <i class="fas fa-edit fa-lg"></i>
+                </button>
+                <button class="btn btn-danger" style="font-size: 1vh;">
+                    <i class="fas fa-trash fa-lg"></i>
+                </button>
+            </span>
+        </p>
+        <hr>
+            <div class="row" >
+            <div class="col-2">
+                <label for="subjectID" class="form-label">Subject ID</label>
+                <input type="text" class="form-control" id="subjectID" name="groupName" required>
+            </div>
+
+                <div class="col-2">
+                    <label for="section" class="form-label">Section</label>
+                    <input type="text" class="form-control" id="section" name="groupName" required>
+                </div>
+                <div class="col">
+                    <label for="groupName" class="form-label">Group Name</label>
+                    <input type="text" class="form-control" id="groupName" name="groupName" required>
+                </div>
+            </div>
+            <div class="row mb-5" >
+                <div class="col">
+                    <label for="groupDescription" class="form-label">Group Description</label>
+                    <textarea class="form-control" id="groupDescription" name="groupDescription" rows="3" required></textarea>
+                </div>
+                <label for="mutiselect" class="form-label">Tag</label>
+                <select class="form-select form-select-solid" id="mutiselect" data-control="select2" data-placeholder="Select an option" data-allow-clear="true" multiple="multiple">
+                    <option></option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                </select>
+            <div class="col">
+                <div class="row mb-5">
                     <div class="col">
-                            <h3>Subject ID</h3>
-                        </div>
-                        <div class="col">
-                            <h3>Subject Name</h3>
-                        </div>
-                        <div class="col">
-                            <h3>Members</h3>
-                        </div>
+                        <label for="Member" class="form-label">Group Member</label>
+                        <textarea class="form-control" id="member" name="member" rows="3" required></textarea>
                     </div>
-                    <br>
-                
-                    <div class="row">
-                        <div class="col">
-                            <strong>Tag :</strong>
-                        </div>
-                        <div class="col">
-                            <strong>Group Name :</strong>
-                        </div>
-                        <div class="col">
-                            <strong>Owner :</strong>
-                        </div>
-                    </div></a>
-                </tr>
-                <!-- Add more rows for other subjects -->
-            </tbody>
-        </button>
-        </div>
+                </div>
+            </div>
+
+            </div>
+        </form>
+
     </div>
 </div>
 <script src="assets/plugins/global/plugins.bundle.js"></script>
@@ -93,7 +102,7 @@
             success: function (data) {
                 $(".sidebar").html(data);
                 $(".nav-link").each(function () {
-                    if ($(this).attr("href") == "/" + filename) {
+                    if ($(this).attr("href") == filename) {
                         $(this).addClass("active");
                     }
                     else {
@@ -107,4 +116,3 @@
 </body>
 
 </html>
-
