Refactor groupdetail.html and mygroup.html templates

--- a/ProjectManagement/src/main/resources/templates/mygroup.html
+++ b/ProjectManagement/src/main/resources/templates/mygroup.html
@@ -36,37 +36,34 @@
     <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
     <div class="col-9 main-content">
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">My Group</p><hr>
-        <button class="table">
+        <button class="table" style="border-radius: 10px;">
             <a href="/groupdetail" class="nav-link link-dark">
                 <div class="row">
                     <div class="col">
-                            <h3>Subject ID</h3>
-                        </div>
-                        <div class="col">
-                            <h3>Subject Name</h3>
-                        </div>
-                        <div class="col">
-                            <h3>Members</h3>
-                        </div>
+                        <h3>Subject ID</h3>
                     </div>
-                    <br>
-                
-                    <div class="row">
-                        <div class="col">
-                            <strong>Tag :</strong>
-                        </div>
-                        <div class="col">
-                            <strong>Group Name :</strong>
-                        </div>
-                        <div class="col">
-                            <strong>Owner :</strong>
-                        </div>
-                    </div></a>
-                </tr>
-                <!-- Add more rows for other subjects -->
-            </tbody>
+                    <div class="col">
+                        <h3>Subject Name</h3>
+                    </div>
+                    <div class="col">
+                        <h3>Members</h3>
+                    </div>
+                </div>
+                <br>
+            
+                <div class="row">
+                    <div class="col">
+                        <strong>Tag :</strong>
+                    </div>
+                    <div class="col">
+                        <strong>Group Name :</strong>
+                    </div>
+                    <div class="col">
+                        <strong>Owner :</strong>
+                    </div>
+                </div>
+            </a>
         </button>
-        </div>
     </div>
 </div>
 <script src="assets/plugins/global/plugins.bundle.js"></script>
