--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -28,47 +28,37 @@
     <div class="col-9 main-content">
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">
             Group Name
-            <span class="float-end">
-                <button class="btn btn-primary" style="font-size: 1vh;">
-                    <i class="fas fa-edit fa-lg"></i>
-                </button>
-                <button class="btn btn-danger" style="font-size: 1vh;">
-                    <i class="fas fa-trash fa-lg"></i>
-                </button>
-            </span>
-        </p>
-        <hr>
-            <div class="row" >
-            <div class="col-2">
-                <label for="subjectID" class="form-label">Subject ID</label>
-                <input type="text" class="form-control" id="subjectID" name="groupName" required>
-            </div>
-
+                <span class="float-end">
+                    <button class="btn btn-primary" style="font-size: 1.5vh;">
+                        <i class="fas fa-edit fa-lg"></i>
+                    </button>
+                    <button class="btn btn-danger" style="font-size: 1.5vh;">
+                        <i class="fas fa-trash fa-lg"></i>
+                    </button>
+                </span>
+            </p>
+            <hr>
+            <div class="row">
                 <div class="col-2">
-                    <label for="section" class="form-label">Section</label>
-                    <input type="text" class="form-control" id="section" name="groupName" required>
+                    <p style="font-size: larger;"><strong>Subject ID:</strong> [subjectID]</p>
+                </div>
+                <div class="col-2">
+                    <p style="font-size: larger;"><strong>Section:</strong> [section]</p>
                 </div>
                 <div class="col">
-                    <label for="groupName" class="form-label">Group Name</label>
-                    <input type="text" class="form-control" id="groupName" name="groupName" required>
+                    <div class="row mb-5"></div>
                 </div>
             </div>
-            <div class="row mb-5" >
+            <div class="row mb-5">
                 <div class="col">
-                    <label for="groupDescription" class="form-label">Group Description</label>
-                    <textarea class="form-control" id="groupDescription" name="groupDescription" rows="3" required></textarea>
+                    <p style="font-size: larger;"><strong>Group Description:</strong> [groupDescription]</p>
                 </div>
-                <label for="mutiselect" class="form-label">Tag</label>
-                <select class="form-select form-select-solid" id="mutiselect" data-control="select2" data-placeholder="Select an option" data-allow-clear="true" multiple="multiple">
-                    <option></option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                </select>
-            <div class="col">
-                <div class="row mb-5">
-                    <div class="col">
-                        <label for="Member" class="form-label">Group Member</label>
-                        <textarea class="form-control" id="member" name="member" rows="3" required></textarea>
+                <p style="font-size: larger;"><strong>Tag:</strong> [Option 1, Option 2]</p>
+                <div class="col">
+                    <div class="row mb-5">
+                        <div class="col">
+                            <p style="font-size: larger;"><strong>Group Member:</strong> [member]</p>
+                        </div>
                     </div>
                 </div>
             </div>
