fetch option tag in creategroup.html

--- a/ProjectManagement/src/main/resources/templates/creategroup.html
+++ b/ProjectManagement/src/main/resources/templates/creategroup.html
@@ -54,10 +54,10 @@
                 </div>
             <div class="col">
                 <label for="mutiselect" class="form-label">Tag</label>
-                <select class="form-select form-select-solid" id="mutiselect" data-control="select2" data-placeholder="Select an option" data-allow-clear="true" multiple="multiple">
-                    <option></option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
+                <select  class="form-select form-select-solid" id="mutiselect" data-control="select2" data-placeholder="Select an option" data-allow-clear="true" multiple="multiple">
+                        <div  th:each="tag : ${tags}">
+                            <option th:text="${tag['tagname']}"></option>
+                        </div>
                 </select>
             </div>
 
