--- a/ProjectManagement/src/main/resources/static/assets/plugins/custom/prismjs/prismjs.bundle.css
+++ b/ProjectManagement/src/main/resources/static/assets/plugins/custom/prismjs/prismjs.bundle.css
@@ -1,11 +1,4 @@
-/**
- * Shades of Purple Theme for Prism.js
- *
- * @author Ahmad Awais <https://twitter.com/MrAhmadAwais/>
- * @support Follow/tweet at https://twitter.com/MrAhmadAwais/
- */
-code[class*=language-],
-pre[class*=language-] {
+code[class*=language-],pre[class*=language-] {
   color: #9efeff;
   direction: ltr;
   text-align: left;
@@ -19,178 +12,140 @@ pre[class*=language-] {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  font-family: "Operator Mono", "Fira Code", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-family: "Operator Mono","Fira Code",Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
   font-weight: 400;
   font-size: 17px;
   line-height: 25px;
-  letter-spacing: 0.5px;
-  text-shadow: 0 1px #222245;
+  letter-spacing: .5px;
+  text-shadow: 0 1px #222245
 }
 
-pre[class*=language-]::-moz-selection,
-pre[class*=language-] ::-moz-selection,
-code[class*=language-]::-moz-selection,
-code[class*=language-] ::-moz-selection,
-pre[class*=language-]::selection,
-pre[class*=language-] ::selection,
-code[class*=language-]::selection,
-code[class*=language-] ::selection {
+code[class*=language-] ::-moz-selection,code[class*=language-] ::selection,code[class*=language-]::-moz-selection,code[class*=language-]::selection,pre[class*=language-] ::-moz-selection,pre[class*=language-] ::selection,pre[class*=language-]::-moz-selection,pre[class*=language-]::selection {
   color: inherit;
-  background: #a599e9;
+  background: #a599e9
 }
 
-/* Code blocks. */
 pre[class*=language-] {
   padding: 2em;
-  margin: 0.5em 0;
-  overflow: auto;
+  margin: .5em 0;
+  overflow: auto
 }
 
-:not(pre) > code[class*=language-],
-pre[class*=language-] {
-  background: #1e1e3f;
+:not(pre)>code[class*=language-],pre[class*=language-] {
+  background: #1e1e3f
 }
 
-/* Inline code */
-:not(pre) > code[class*=language-] {
-  padding: 0.1em;
-  border-radius: 0.3em;
+:not(pre)>code[class*=language-] {
+  padding: .1em;
+  border-radius: .3em
 }
 
 .token {
-  font-weight: 400;
+  font-weight: 400
 }
 
-.token.comment,
-.token.prolog,
-.token.cdata {
-  color: #b362ff;
+.token.cdata,.token.comment,.token.prolog {
+  color: #b362ff
 }
 
-.token.delimiter,
-.token.keyword,
-.token.selector,
-.token.important,
-.token.atrule {
-  color: #ff9d00;
+.token.atrule,.token.delimiter,.token.important,.token.keyword,.token.selector {
+  color: #ff9d00
 }
 
-.token.operator,
-.token.attr-name {
-  color: #ffb454;
+.token.attr-name,.token.operator {
+  color: #ffb454
 }
 
 .token.punctuation {
-  color: #ffffff;
+  color: #fff
 }
 
 .token.boolean {
-  color: #ff628c;
+  color: #ff628c
 }
 
-.token.tag,
-.token.tag .punctuation,
-.token.doctype,
-.token.builtin {
-  color: #ff9d00;
+.token.builtin,.token.doctype,.token.tag,.token.tag .punctuation {
+  color: #ff9d00
 }
 
-.token.entity,
-.token.symbol {
-  color: #6897bb;
+.token.entity,.token.symbol {
+  color: #6897bb
 }
 
 .token.number {
-  color: #ff628c;
+  color: #ff628c
 }
 
-.token.property,
-.token.constant,
-.token.variable {
-  color: #ff628c;
+.token.constant,.token.property,.token.variable {
+  color: #ff628c
 }
 
-.token.string,
-.token.char {
-  color: #a5ff90;
+.token.char,.token.string {
+  color: #a5ff90
 }
 
-.token.attr-value,
-.token.attr-value .punctuation {
-  color: #a5c261;
+.token.attr-value,.token.attr-value .punctuation {
+  color: #a5c261
 }
 
 .token.attr-value .punctuation:first-child {
-  color: #a9b7c6;
+  color: #a9b7c6
 }
 
 .token.url {
   color: #287bde;
-  text-decoration: underline;
+  text-decoration: underline
 }
 
 .token.function {
-  color: #fad000;
+  color: #fad000
 }
 
 .token.regex {
-  background: #364135;
+  background: #364135
 }
 
 .token.bold {
-  font-weight: bold;
+  font-weight: 700
 }
 
 .token.italic {
-  font-style: italic;
+  font-style: italic
 }
 
 .token.inserted {
-  background: #00ff00;
+  background: #0f0
 }
 
 .token.deleted {
-  background: #ff000d;
+  background: #ff000d
 }
 
-code.language-css .token.property,
-code.language-css .token.property + .token.punctuation {
-  color: #a9b7c6;
+code.language-css .token.property,code.language-css .token.property+.token.punctuation {
+  color: #a9b7c6
 }
 
 code.language-css .token.id {
-  color: #ffc66d;
+  color: #ffc66d
 }
 
-code.language-css .token.selector > .token.class,
-code.language-css .token.selector > .token.attribute,
-code.language-css .token.selector > .token.pseudo-class,
-code.language-css .token.selector > .token.pseudo-element {
-  color: #ffc66d;
+code.language-css .token.selector>.token.attribute,code.language-css .token.selector>.token.class,code.language-css .token.selector>.token.pseudo-class,code.language-css .token.selector>.token.pseudo-element {
+  color: #ffc66d
 }
 
 .token.class-name {
-  color: #fb94ff;
+  color: #fb94ff
 }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  background: none;
+.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url {
+  background: 0 0
 }
 
-pre .line-highlight,
-pre .line-highlight.line-highlight,
-pre > code.line-highlight {
+.line-highlight.line-highlight {
   margin-top: 36px;
-  background: linear-gradient(to right, rgba(179, 98, 255, 0.17), transparent);
+  background: linear-gradient(to right,rgba(179,98,255,.17),transparent)
 }
 
-pre .line-highlight:before,
-pre > code.line-highlight:before,
-pre .line-highlight[data-end]:after,
-pre > code.line-highlight[data-end]:after {
-  content: "";
+.line-highlight.line-highlight:before,.line-highlight.line-highlight[data-end]:after {
+  content: ""
 }
