--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -29,11 +29,11 @@
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">
             Group Name
                 <span class="float-end">
-                    <button class="btn btn-primary" style="font-size: 1.5vh;">
-                        <i class="fas fa-edit fa-lg"></i>
+                    <button class="btn btn-primary" style="font-size: 1.5vh;" data-bs-toggle="modal" data-bs-target="#editGroupModal">
+                        <i class="fas fa-edit fa-lg"></i> Edit
                     </button>
-                    <button class="btn btn-danger" style="font-size: 1.5vh;">
-                        <i class="fas fa-trash fa-lg"></i>
+                    <button id="deleteGroupButton" type="button" class="btn btn-danger" style="font-size: 1.5vh;" onclick="showDeleteGroupModal()">
+                        <i class="fas fa-trash fa-lg"></i> Delete
                     </button>
                 </span>
             </p>
@@ -68,6 +68,48 @@
 
     </div>
 </div>
+<!-- Modal Edit -->
+<div class="modal fade" id="editGroupModal" tabindex="-1" aria-labelledby="editGroupModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editGroupModalLabel">Edit Group Information</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Add form fields for editing group information -->
+                <label for="editGroupName" class="form-label">Group Name:</label>
+                <input type="text" class="form-control" id="editGroupName" placeholder="Enter group name">
+
+                <!-- Add other fields as needed -->
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="saveEditedGroup()">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Delete -->
+<div class="modal fade" id="deleteGroupModal" tabindex="-1" aria-labelledby="deleteGroupModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteGroupModalLabel">Confirm Deletion</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete this group?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" id="confirmDeleteGroup">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <script src="assets/plugins/global/plugins.bundle.js"></script>
 <script src="assets/js/scripts.bundle.js"></script>
 <!--end::Global Javascript Bundle-->
@@ -101,6 +143,56 @@
                 });
             }
         });
+    }
+
+    function showDeleteGroupModal() {
+        $('#deleteGroupModal').modal('show');
+    }
+
+    $('#confirmDeleteGroup').click(function() {
+        // Perform deletion here, e.g., call a function to delete the group
+        deleteGroup();
+        // Close the modal
+        $('#deleteGroupModal').modal('hide');
+    });
+
+    function deleteGroup() {
+        // Add your logic to delete the group from Firestore here
+        console.log("Group deleted!");
+    }
+
+    // Add a variable to store the current group name
+    var currentGroupName = "";
+
+    // Function to fetch and populate group data in the edit modal
+    function editGroup(groupName) {
+        currentGroupName = groupName;
+        // Fetch group data using an AJAX call or any other method
+        // Populate the modal fields with the fetched data
+        // For simplicity, let's assume you have a function getGroupData(groupName) to fetch the data
+        var groupData = getGroupData(groupName);
+
+        // Populate modal fields
+        $("#editGroupName").val(groupData.groupName);
+        // Populate other fields as needed
+    }
+
+    // Function to save edited group information
+    function saveEditedGroup() {
+        var editedGroupName = $("#editGroupName").val();
+        // Get other edited fields as needed
+
+        // Perform the update in the Firestore database
+        updateGroup(currentGroupName, editedGroupName);
+        // Close the modal
+        $('#editGroupModal').modal('hide');
+    }
+
+    // Function to update group information in Firestore
+    function updateGroup(oldGroupName, newGroupName) {
+        // Add your logic to update group information in Firestore
+        // Use the Firestore SDK to update the document
+        // For example, you can use the DocumentReference and set method
     }
 </script>
 </body>
