edit javascript delete group

--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -146,7 +146,7 @@
     // Add this function to handle the delete confirmation button click
     $('#confirmDeleteGroup').click(function() {
         // Get the group name from the HTML or your data
-        var groupName = 
+        var groupName = 'group1';
         // Call the deleteGroup function with the group name
         deleteGroup(groupName);
 
