Scrum Board (update)
ยังไม่เสร็จ ขึ้นโครงแล้ว
- เปลี่ยนสถานะได้ (To DO > Doing)
- จัดหน้าเสร็จแล้ว

--- a/ProjectManagement/src/main/resources/templates/profile.html
+++ b/ProjectManagement/src/main/resources/templates/profile.html
@@ -297,8 +297,8 @@
                 <div class="infoNL">
                     <div>
                         <H3>
-                            <span th:text="${username}"></span><br>
-                            <span th:text="${firstName + ' ' + lastName}"></span>
+                            <span th:text="${session.username}"></span><br>
+                            <span th:text="${session.firstName + ' ' + session.lastName}"></span>
                         </H3>
                     </div>
                 </div>
