--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -1,31 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css" />
-    <!--end::Page Vendor Stylesheets-->
-    <!--begin::Global Stylesheets Bundle(used by all pages)-->
-    <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="/styles.css" rel="stylesheet"  type="text/css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title>creategroup</title>
-    <style>
-
-    </style>
-</head>
-<body>
-<div class="row" >
-    <!-- สำหรับรับค่า Menubar -->
-    <div class="sidebar col-3"></div>
-    <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
-    <div class="col-9 main-content">
+<div class="col-9 main-content">
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">
             Group Name
                 <span class="float-end">
@@ -40,10 +13,10 @@
             <hr>
             <div class="row">
                 <div class="col-2">
-                    <p style="font-size: larger;"><strong>Subject ID:</strong> [subjectID]</p>
+                    <p style="font-size: larger;"><strong>Subject ID:</strong> <span th:text="${group.subjectID}"></span></p>
                 </div>
                 <div class="col-2">
-                    <p style="font-size: larger;"><strong>Section:</strong> [section]</p>
+                    <p style="font-size: larger;"><strong>Section:</strong><span th:text="${group.section}"></span></p>
                 </div>
                 <div class="col">
                     <div class="row mb-5"></div>
@@ -51,13 +24,17 @@
             </div>
             <div class="row mb-5">
                 <div class="col">
-                    <p style="font-size: larger;"><strong>Group Description:</strong> [groupDescription]</p>
+                    <p style="font-size: larger;"><strong>Group Description:</strong><span th:text="${group.groupDescription}"></span></p>
                 </div>
-                <p style="font-size: larger;"><strong>Tag:</strong> [Option 1, Option 2]</p>
+                <p style="font-size: larger;"><strong>Tag:</strong><span th:each=" tag :${group.tag}">
+                    <span th:text="${tag}"></span>
+                </span></p>
                 <div class="col">
                     <div class="row mb-5">
                         <div class="col">
-                            <p style="font-size: larger;"><strong>Group Member:</strong> [member]</p>
+                            <p style="font-size: larger;"><strong>Group Member:</strong><span th:each=" member :${group.members}" >
+                                <span th:text="${member.firstName}"></span>
+                            </span></p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +44,7 @@
         </form>
 
     </div>
-</div>
+
 <!-- Modal Edit -->
 <div class="modal fade" id="editGroupModal" tabindex="-1" aria-labelledby="editGroupModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -108,10 +85,7 @@
       </div>
     </div>
   </div>
-<script src="assets/plugins/global/plugins.bundle.js"></script>
-<script src="assets/js/scripts.bundle.js"></script>
-<script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-<script src="assets/js/custom/documentation/documentation.js"></script>
+
 
 <script>
     var filename = window.location.pathname.split("/").pop();
