--- a/ProjectManagement/src/main/resources/templates/mygroup.html
+++ b/ProjectManagement/src/main/resources/templates/mygroup.html
@@ -46,7 +46,7 @@
                         <h3>Subject Name <span th:text="${group.subjectID}"></span></h3>
                     </div>
                     <div class="col">
-                        <h3>Members</h3>
+                        <h3>Members  <span th:text="${group.joinedMember}+'/'+${group.maxMember}"> </span></h3>
                     </div>
                 </div>
                 <br>
