--- a/ProjectManagement/src/main/resources/static/styles.css
+++ b/ProjectManagement/src/main/resources/static/styles.css
@@ -158,6 +158,7 @@ body {
     padding: 20px;
     background: rgba(255, 255, 255, 0.9);
     margin: 15px;
+    border-radius: 25px;
 }
 .input{
     height: 50px;
@@ -232,4 +233,37 @@ body {
 }
 .search:hover {
     background-color: #005e21;
+}
+
+.profile-link {
+    text-decoration: none;
+    display: inline-block;
+    width: 210px; /* Set the width to your desired value */
+    height: 90px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.profile-link:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.profile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.profile div {
+    display: flex;
+    flex-direction: column;
+}
+
+.student {
+    font-weight: bold;
 }
