--- a/ProjectManagement/src/main/resources/templates/profile.html
+++ b/ProjectManagement/src/main/resources/templates/profile.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css" />
+    <!--end::Page Vendor Stylesheets-->
+    <!--begin::Global Stylesheets Bundle(used by all pages)-->
+    <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="/styles.css" rel="stylesheet"  type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <title>homestudent</title>
@@ -266,26 +266,21 @@
             background-color: #008CBA;
             color: white;
         }
+
+        .main-content {
+            background: none; /* turn off the background */
+        }
+
     </style>
 </head>
 
 <body>
-    <div class="sidebar">
-        <div class="profile">
-            <img src="/static/icon.png" alt="Profile Picture">
-            <div>
-                <div class="staff">Username</div>
-                <div>First Last</div>
-            </div>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="#">My Group</a></li>
-                <li><a href="#">My Project</a></li>
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-        </div>
-    </div>
+<!-- สำหรับรับค่า Menubar -->
+<div class="row" >
+    <!-- สำหรับรับค่า Menubar -->
+    <div class="sidebar col-3"></div>
+    <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
+    <div class="col-9 main-content">
 
 <div class="content">
     <div class="white-frame">
@@ -335,7 +330,6 @@
                 </div>
             </div>
 
-    </div>
         <!-- edit Modal -->
         <div class="modal fade" id="addSubjectModal" tabindex="-1"
              aria-labelledby="addSubjectModalLabel" aria-hidden="true">
@@ -369,8 +363,22 @@
                         </div>
                     </form>
                 </div>
+
                 <!-- end edit Modal -->
     </div>
+        </div>
+
+    </div>
+</div>
+            <script src="assets/plugins/global/plugins.bundle.js"></script>
+            <script src="assets/js/scripts.bundle.js"></script>
+            <!--end::Global Javascript Bundle-->
+            <!--begin::Page Vendors Javascript(used by this page)-->
+            <script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
+            <!--end::Page Vendors Javascript-->
+            <!--begin::Page Custom Javascript(used by this page)-->
+            <script src="assets/js/custom/documentation/documentation.js"></script>
+
     <script th:inline="javascript">
         /*<![CDATA[*/
         function deleteUser(username) {
@@ -530,6 +538,32 @@
                     }
                 }
             </script>
+<script>
+    var filename = window.location.pathname.split("/").pop();
+    $(document).ready(function() {
+        getSideBar()
+    });
+
+
+    function getSideBar(){
+        console.log("filename: " + filename)
+        $.ajax({
+            url: "/menu_bar_student",
+            type: "GET",
+            success: function (data) {
+                $(".sidebar").html(data);
+                $(".nav-link").each(function () {
+                    if ($(this).attr("href") == "/" + filename) {
+                        $(this).addClass("active");
+                    }
+                    else {
+                        $(this).removeClass("active");
+                    }
+                });
+            }
+        });
+    }
+</script>
 
 </body>
 </html>
