Refactor GroupDetail controller and groupdetail.html
This commit refactors the GroupDetail controller and groupdetail.html file. It removes the updateGroupInfo method from the controller and updates the button class in groupdetail.html.

--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -2,7 +2,7 @@
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">
             <span th:text="${group.groupName}"></span>
                 <span class="float-end">
-                    <button id="editGroupButton" class="btn btn-primary" style="font-size: 1.5vh;" data-bs-toggle="modal" data-bs-target="#editGroupModal">
+                    <button class="btn btn-primary" style="font-size: 1.5vh;" data-bs-toggle="modal" data-bs-target="#editGroupModal">
                         <i class="fas fa-edit fa-lg"></i> Edit
                     </button>
                     <button id="deleteGroupButton" type="button" class="btn btn-danger" style="font-size: 1.5vh;" onclick="showDeleteGroupModal()">
@@ -91,99 +91,64 @@
   </div>
 
 
-  <script>
+<script>
     var filename = window.location.pathname.split("/").pop();
-
     $(document).ready(function() {
-        getSideBar();
-
-        // Add event listener for the "Edit" button
-        $('#editGroupButton').click(function() {
-            // Retrieve group information when the button is clicked
-            var groupName = $('#editGroupName').val();
-            var groupDescription = $('#editGroupDescription').val();
-
-            // Call the function to update group information in Firestore
-            updateGroupInfo(groupName, groupDescription);
-
-            // Close the modal
-            $('#editGroupModal').modal('hide');
-        });
-
-        function getSideBar() {
-            console.log("filename: " + filename)
-            $.ajax({
-                url: "/menu_bar_student",
-                type: "GET",
-                success: function (data) {
-                    $(".sidebar").html(data);
-                    $(".nav-link").each(function () {
-                        if ($(this).attr("href") == filename) {
-                            $(this).addClass("active");
-                        } else {
-                            $(this).removeClass("active");
-                        }
-                    });
-                }
-            });
-        }
-
-        function showDeleteGroupModal() {
-            $('#deleteGroupModal').modal('show');
-        }
-
-        // Add this function to handle the delete confirmation button click
-        $('#confirmDeleteGroup').click(function() {
-            // Get the group name from the HTML or your data
-            var groupName = 'group1';
-            // Call the deleteGroup function with the group name
-            deleteGroup(groupName);
-
-            // Close the modal
-            $('#deleteGroupModal').modal('hide');
-        });
-
-        // Add this function to perform the AJAX request to delete the group
-        function deleteGroup(groupName) {
-            $.ajax({
-                type: 'POST',
-                url: '/deleteGroup',
-                data: { groupName: groupName },
-                success: function(response) {
-                    console.log(response);
-                    // Handle success, for example, show a message or refresh the page
-                    location.reload();
-                },
-                error: function(error) {
-                    console.error(error);
-                    // Handle error, show an alert or log the error
-                }
-            });
-        }
-
-        // Add this function to perform the AJAX request to update group information
-        function updateGroupInfo(groupName, groupDescription) {
-            console.log('Updating group information:', groupName, groupDescription);
-
-            $.ajax({
-                type: 'POST',
-                url: '/updateGroupInfo',
-                data: {
-                    groupName: groupName,
-                    groupDescription: groupDescription
-                },
-                success: function(response) {
-                    console.log(response);
-                    // Handle success, for example, show a message or refresh the page
-                    location.reload();
-                },
-                error: function(error) {
-                    console.error(error);
-                    // Handle error, show an alert or log the error
-                }
-            });
-        }
+        getSideBar()
     });
+
+
+    function getSideBar(){
+        console.log("filename: " + filename)
+        $.ajax({
+            url: "/menu_bar_student",
+            type: "GET",
+            success: function (data) {
+                $(".sidebar").html(data);
+                $(".nav-link").each(function () {
+                    if ($(this).attr("href") == filename) {
+                        $(this).addClass("active");
+                    }
+                    else {
+                        $(this).removeClass("active");
+                    }
+                });
+            }
+        });
+    }
+
+    function showDeleteGroupModal() {
+        $('#deleteGroupModal').modal('show');
+    }
+
+    // Add this function to handle the delete confirmation button click
+    $('#confirmDeleteGroup').click(function() {
+        // Get the group name from the HTML or your data
+        var groupName = 'group1';
+        // Call the deleteGroup function with the group name
+        deleteGroup(groupName);
+
+        // Close the modal
+        $('#deleteGroupModal').modal('hide');
+    });
+
+    // Add this function to perform the AJAX request to delete the group
+    function deleteGroup(groupName) {
+        $.ajax({
+            type: 'POST',
+            url: '/deleteGroup',
+            data: { groupName: groupName },
+            success: function(response) {
+                console.log(response);
+                // Handle success, for example, show a message or refresh the page
+                location.reload();
+            },
+            error: function(error) {
+                console.error(error);
+                // Handle error, show an alert or log the error
+            }
+        });
+    }
 </script>
 </body>
 
